# resspec

./: .gitignore  README.md  build.sh  dune-project  resspec.opam  setup.sh  styles.typ  testing.typ
_build/: .db  .digest-db  log
_build/default/: README.md  resspec.dune-package  resspec.install  resspec.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: resspec.cma  resspec.cmxa  resspec.cmxs
_build/default/lib/.merlin-conf/: lib-resspec
_build/default/lib/.resspec.objs/byte/: resspec.cmi  resspec.cmo  resspec.cmt
_build/default/lib/.resspec.objs/native/: resspec.cmx
_build/default/test/.merlin-conf/: exe-test_ores
_build/default/test/.test_ores.eobjs/byte/: dune__exe__Test_ores.cmi  dune__exe__Test_ores.cmti
_build/default/test/.test_ores.eobjs/native/: dune__exe__Test_ores.cmx
_build/install/default/lib/resspec/: META  dune-package  opam
demo/Education/: meta.json  test1.typ  test2.typ
demo/Experience/: test3.typ
example/: resume.typ
lib/: dune
test/: dune
